# g2o_trajOpt

./: CMakeLists.txt  README.md  draw_traj.py  g2o_trajOpt.kdev4  traj_match.cpp  traj_match_b.cpp  traj_match_c.cpp  traj_match_direct.cpp  traj_match_g2o.cpp  traj_match_recover.cpp
data/: loops.txt  traj1.txt  traj10.txt  traj11.txt  traj12.txt  traj13.txt  traj14.txt  traj15.txt  traj16.txt  traj17.txt  traj18.txt  traj19.txt  traj2.txt  traj20.txt  traj21.txt  traj22.txt  traj23.txt  traj24.txt  traj25.txt  traj26.txt  traj27.txt  traj28.txt  traj29.txt  traj3.txt  traj30.txt  traj31.txt  traj32.txt  traj33.txt  traj34.txt  traj35.txt  traj36.txt  traj37.txt  traj38.txt  traj39.txt  traj4.txt  traj40.txt  traj41.txt  traj42.txt  traj43.txt  traj44.txt  (+41 more)
data_mag/: traj1.txt  traj10.txt  traj11.txt  traj12.txt  traj13.txt  traj14.txt  traj15.txt  traj16.txt  traj17.txt  traj18.txt  traj19.txt  traj2.txt  traj20.txt  traj21.txt  traj22.txt  traj23.txt  traj24.txt  traj25.txt  traj26.txt  traj27.txt  traj28.txt  traj29.txt  traj3.txt  traj30.txt  traj31.txt  traj32.txt  traj33.txt  traj34.txt  traj35.txt  traj36.txt  traj37.txt  traj38.txt  traj39.txt  traj4.txt  traj40.txt  traj41.txt  traj42.txt  traj43.txt  traj44.txt  traj45.txt  (+40 more)
data_ori/: loops.txt
deprecated/: traj_match_a.cpp  traj_match_b.cpp  traj_match_b_complete.cpp  traj_match_c.cpp  traj_match_e.cpp  traj_match_e2.cpp  traj_match_f2.cpp  traj_match_recover.cpp
result/: aligned.txt  draw_map.py  loopGlobe.txt  optimized.txt  pos_knn.py  result_direct
result/batch1/: aligned_batch1_cholmod.txt  (+3 more)
(+37 files in other folders)
